--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </p>
                 </div>
                 <div>
-                    <img src="https://placehold.co/600x400/e0e0e0/555555?text=Innovative+Solutions" alt="Abstract image representing innovation" class="rounded-xl shadow-lg">
+                    <img src="/images/particle-min.png" alt="Abstract image representing innovation" class="rounded-xl shadow-lg">
                 </div>
             </div>
         </div>
