--- a/index.html
+++ b/index.html
@@ -53,6 +53,32 @@
         .footer-link:hover {
             color: #007aff; /* Apple blue */
         }
+
+        /* Hero Section with Blurred Lab Background */
+        .hero-lab-bg {
+            background-image: url('https://placehold.co/1600x900/1a1a1a/ffffff?text=Generic+Lab'); /* Placeholder for a generic lab image */
+            background-size: cover;
+            background-position: center;
+            position: relative;
+            overflow: hidden; /* Ensures pseudo-element doesn't spill */
+        }
+
+        .hero-lab-bg::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0, 0, 0, 0.5); /* Dark overlay for text readability */
+            backdrop-filter: blur(8px); /* Apply blur to the background image */
+            z-index: 1;
+        }
+
+        .hero-lab-bg .container {
+            position: relative;
+            z-index: 2; /* Ensures content is above the overlay */
+        }
     </style>
 </head>
 <body class="antialiased">
@@ -73,7 +99,7 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="bg-gradient-to-br from-blue-500 to-indigo-600 text-white py-20 text-center rounded-b-3xl">
+    <section class="hero-lab-bg text-white py-20 text-center rounded-b-3xl">
         <div class="container">
             <h1 class="text-5xl font-bold mb-6 leading-tight">Navigating the Uncharted. Defining the Undefined.</h1>
             <p class="text-xl mb-8 opacity-90">
@@ -97,7 +123,7 @@
                     </p>
                 </div>
                 <div>
-                    <img src="/images/particle-min.png" alt="Abstract image representing innovation" class="rounded-xl shadow-lg">
+                    <img src="https://placehold.co/600x400/e0e0e0/555555?text=Innovative+Solutions" alt="Abstract image representing innovation" class="rounded-xl shadow-lg">
                 </div>
             </div>
         </div>
@@ -182,7 +208,7 @@
                 <div class="card">
                     <h3 class="card-title">Interdimensional Performance Reviews</h3>
                     <p class="card-description">
-                        We diligently conduct performance reviews for unmanned space probes that have been isolated for 15+ years. Their feedback, though sparse, is invaluable for our "Quantum HR Violations: Confidential" filing cabinets.
+                        We diligently conduct performance reviews for unmanned space probes that had been isolated for 15+ years. Their feedback, though sparse, is invaluable for our "Quantum HR Violations: Confidential" filing cabinets.
                     </p>
                 </div>
                 <div class="card">
@@ -203,7 +229,7 @@
             <p class="text-xl mb-8 opacity-90">
                 Whether you're seeking solutions beyond the conventional or simply curious about the next frontier of corporate absurdity, our team is ready to engage.
             </p>
-            <a href="mailto:info@quantumimprobabilitysolutions.com" class="inline-block bg-white text-blue-600 font-semibold py-3 px-8 rounded-full text-lg shadow-lg hover:bg-gray-100 transition-all duration-300 transform hover:scale-105">Contact Our Interdimensional Relations Department</a>
+            <a href="mailto:info@quantumimprobability.com" class="inline-block bg-white text-blue-600 font-semibold py-3 px-8 rounded-full text-lg shadow-lg hover:bg-gray-100 transition-all duration-300 transform hover:scale-105">Contact Our Interdimensional Relations Department</a>
         </div>
     </section>
 
