--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         /* Hero Section with Blurred Lab Background */
         .hero-lab-bg {
-            background-image: url('https://placehold.co/1600x900/1a1a1a/ffffff?text=Generic+Lab'); /* Placeholder for a generic lab image */
+            background-image: url('/images/lab.png'); /* Placeholder for a generic lab image */
             background-size: cover;
             background-position: center;
             position: relative;
