--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 </div>
                 <div class="md:w-1/2 flex justify-center md:justify-end">
                     <!-- Quantum Improbability Solutions Logo -->
-                    <img src="/images/qis-min.png" alt="Quantum Improbability Solutions Logo - Stylized Atom" class="w-64 h-64 md:w-80 md:h-80 object-contain p-4 bg-gray-900 border border-gray-700 rounded-sm" onerror="this.onerror=null;this.src='https://placehold.co/320x320/1a1a1a/e0e0e0?text=Logo+Placeholder';">
+                    <img src="/images/team-min.png" alt="Quantum Improbability Solutions Logo - Stylized Atom" class="w-64 h-64 md:w-80 md:h-80 object-contain p-4 bg-gray-900 border border-gray-700 rounded-sm" onerror="this.onerror=null;this.src='https://placehold.co/320x320/1a1a1a/e0e0e0?text=Logo+Placeholder';">
                 </div>
             </section>
 
