--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div class="min-h-screen flex flex-col items-center p-4">
         <!-- Header -->
         <header class="w-full max-w-7xl flex justify-between items-center py-6 px-4 border-b border-gray-800">
-            <div class="text-2xl font-bold text-white tracking-widest">QUANTUM IMPROPABILITY SOLUTIONS</div>
+            <div class="text-2xl font-bold text-white tracking-widest">QIS</div>
             <nav>
                 <ul class="flex space-x-8 text-sm font-medium">
                     <li><a href="#home" class="nav-item">HOME</a></li>
