--- a/index.html
+++ b/index.html
@@ -159,31 +159,32 @@
                 <h2 class="text-4xl font-bold mb-8">Our Core Divisions</h2>
                 <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 text-gray-300">
                     <div class="p-6 border border-gray-800 rounded-sm bg-gray-900/50">
-                        <h3 class="text-xl font-semibold mb-4 text-white">Macrodata Refinement</h3>
-                        <p class="text-sm">The foundational pillar of our operations, ensuring data integrity and classification.</p>
+                        <h3 class="text-xl font-semibold mb-4 text-white">Astronomical Initiatives</h3>
+                        <p class="text-sm">From deploying 42,000 filing cabinets into orbit for literal "cloud storage" to building upside-down observatories, we redefine the boundaries between space exploration and catastrophic debris.</p>
                     </div>
                     <div class="p-6 border border-gray-800 rounded-sm bg-gray-900/50">
-                        <h3 class="text-xl font-semibold mb-4 text-white">Optics & Design</h3>
-                        <p class="text-sm">Crafting the visual and conceptual frameworks that define our corporate identity.</p>
+                        <h3 class="text-xl font-semibold mb-4 text-white">Sales & Quantum Marketing</h3>
+                        <p class="text-sm">Our Salesion particles and gravitational asset management strategies aim to patent infinity itself, boldly disrupting CERN’s monopoly on reality with better quarterly projections.</p>
                     </div>
                     <div class="p-6 border border-gray-800 rounded-sm bg-gray-900/50">
-                        <h3 class="text-xl font-semibold mb-4 text-white">Lexical Scrutiny</h3>
-                        <p class="text-sm">Analyzing and optimizing linguistic structures for maximum clarity and impact.</p>
+                        <h3 class="text-xl font-semibold mb-4 text-white">Mathematical Computation</h3>
+                        <p class="text-sm">After years operating without the concept of zero, we now embrace quantum superposition in elevators and payroll systems that charge employees for showing up.</p>
                     </div>
                     <div class="p-6 border border-gray-800 rounded-sm bg-gray-900/50">
-                        <h3 class="text-xl font-semibold mb-4 text-white">Perpetual Wellness</h3>
-                        <p class="text-sm">Dedicated to the holistic well-being and sustained productivity of our valued employees.</p>
+                        <h3 class="text-xl font-semibold mb-4 text-white">Physics & Engineering</h3>
+                        <p class="text-sm">Featuring the Small Hadron Collider (powered by coffee machines) and momentum-based management that only works when the space heater is off.</p>
                     </div>
                     <div class="p-6 border border-gray-800 rounded-sm bg-gray-900/50">
-                        <h3 class="text-xl font-semibold mb-4 text-white">Testing & Evaluation</h3>
-                        <p class="text-sm">Rigorous assessment protocols to ensure the highest standards of operational excellence.</p>
+                        <h3 class="text-xl font-semibold mb-4 text-white">Interdimensional Operations</h3>
+                        <p class="text-sm">We pioneered performance reviews for unmanned probes and accidentally made first contact with aliens dialing the wrong galaxy.</p>
                     </div>
                     <div class="p-6 border border-gray-800 rounded-sm bg-gray-900/50">
-                        <h3 class="text-xl font-semibold mb-4 text-white">Security & Compliance</h3>
-                        <p class="text-sm">Upholding the integrity of our systems and the privacy of our proprietary methods.</p>
+                        <h3 class="text-xl font-semibold mb-4 text-white">Compliance & Reality Assurance</h3>
+                        <p class="text-sm">Overseeing quantum HR violations and verifying that reality is, in fact, still functioning (more or less).</p>
                     </div>
                 </div>
             </section>
+
 
             <!-- Careers Section -->
             <section id="careers" class="py-16 md:py-24 text-center">
