--- a/index.html
+++ b/index.html
@@ -99,15 +99,23 @@
 <body class="grid-bg">
     <div class="min-h-screen flex flex-col items-center p-4">
         <!-- Header -->
-        <header class="w-full max-w-7xl flex justify-between items-center py-6 px-4 border-b border-gray-800">
+        <header class="w-full max-w-7xl flex justify-between items-center py-6 px-4 border-b border-gray-800 relative">
             <div class="text-2xl font-bold text-white tracking-widest">QIS</div>
-            <nav>
-                <ul class="flex space-x-8 text-sm font-medium">
-                    <li><a href="#home" class="nav-item">HOME</a></li>
-                    <li><a href="#about" class="nav-item">ABOUT</a></li>
-                    <li><a href="#divisions" class="nav-item">DIVISIONS</a></li>
-                    <li><a href="#careers" class="nav-item">CAREERS</a></li>
-                    <li><a href="#contact" class="nav-item">CONTACT</a></li>
+            <!-- Hamburger Button -->
+            <button id="menu-button" class="md:hidden text-white focus:outline-none" aria-label="Toggle menu">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M4 6h16M4 12h16M4 18h16"></path>
+                </svg>
+            </button>
+            <!-- Navigation Menu -->
+            <nav id="mobile-menu" class="hidden md:flex flex-col md:flex-row absolute md:static top-full left-0 w-full md:w-auto bg-gray-900 md:bg-transparent border-t border-gray-800 md:border-none">
+                <ul class="flex flex-col md:flex-row md:space-x-8 text-sm font-medium">
+                    <li><a href="#home" class="nav-item block px-4 py-2 md:p-0">HOME</a></li>
+                    <li><a href="#about" class="nav-item block px-4 py-2 md:p-0">ABOUT</a></li>
+                    <li><a href="#divisions" class="nav-item block px-4 py-2 md:p-0">DIVISIONS</a></li>
+                    <li><a href="#careers" class="nav-item block px-4 py-2 md:p-0">CAREERS</a></li>
+                    <li><a href="#contact" class="nav-item block px-4 py-2 md:p-0">CONTACT</a></li>
                 </ul>
             </nav>
         </header>
@@ -232,4 +240,15 @@
         });
     </script>
 </body>
+
+<script>
+    // Toggle mobile menu
+    const menuButton = document.getElementById('menu-button');
+    const mobileMenu = document.getElementById('mobile-menu');
+
+    menuButton.addEventListener('click', () => {
+        mobileMenu.classList.toggle('hidden');
+    });
+</script>
+
 </html>
