--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </svg>
             </button>
             <!-- Navigation Menu -->
-            <nav id="mobile-menu" class="hidden md:flex flex-col md:flex-row absolute md:static top-full left-0 w-full md:w-auto bg-gray-900 md:bg-transparent border-t border-gray-800 md:border-none">
+            <nav id="mobile-menu" class="hidden md:flex flex-col md:flex-row absolute md:static top-full left-0 w-full md:w-auto bg-gray-900 md:bg-transparent border-t border-gray-800 md:border-none z-50">
                 <ul class="flex flex-col md:flex-row md:space-x-8 text-sm font-medium">
                     <li><a href="#home" class="nav-item block px-4 py-2 md:p-0">HOME</a></li>
                     <li><a href="#about" class="nav-item block px-4 py-2 md:p-0">ABOUT</a></li>
@@ -242,12 +242,22 @@
 </body>
 
 <script>
-    // Toggle mobile menu
+    // Toggle mobile menu visibility
     const menuButton = document.getElementById('menu-button');
     const mobileMenu = document.getElementById('mobile-menu');
+    const menuLinks = mobileMenu.querySelectorAll('a');
 
     menuButton.addEventListener('click', () => {
         mobileMenu.classList.toggle('hidden');
+    });
+
+    // Collapse menu after clicking a link
+    menuLinks.forEach(link => {
+        link.addEventListener('click', () => {
+            if (!mobileMenu.classList.contains('hidden')) {
+                mobileMenu.classList.add('hidden');
+            }
+        });
     });
 </script>
 
