--- a/index.html
+++ b/index.html
@@ -124,22 +124,25 @@
         <main class="flex-grow w-full max-w-7xl px-4">
 
             <!-- Hero Section -->
-            <section id="home" class="flex flex-col md:flex-row items-center justify-between py-16 md:py-24 text-center md:text-left">
-                <div class="md:w-1/2 mb-8 md:mb-0">
+            <section id="home" class="flex flex-col md:flex-row items-center md:items-start justify-between py-16 md:py-24 text-center md:text-left gap-8">
+                <div class="md:w-1/2">
                     <h1 class="text-5xl md:text-6xl font-extrabold leading-tight mb-6">
                         A Refined Existence.
                         <br>A Better You.
                     </h1>
-                    <p class="text-lg text-gray-400 mb-8 max-w-md mx-auto md:mx-0">
+                    <p class="text-lg text-gray-400 mb-8 max-w-md">
                         At Quantum Improbability Solutions, we believe in the inherent potential within every individual. Through our innovative programs, we unlock new efficiencies and foster unparalleled focus.
                     </p>
                     <a href="#careers" class="button-primary inline-block text-lg font-semibold">
                         EXPLORE OPPORTUNITIES
                     </a>
                 </div>
-                <div class="md:w-1/2 flex justify-center md:justify-end">
+                <div class="md:w-1/2 flex justify-center md:justify-start">
                     <!-- Quantum Improbability Solutions Team -->
-                    <img src="/images/team-min.png" alt="Quantum Improbability Solutions Team - Stylized Atom" class="w-64 h-64 md:w-80 md:h-80 object-contain p-4 bg-gray-900 border border-gray-700 rounded-sm" onerror="this.onerror=null;this.src='https://placehold.co/320x320/1a1a1a/e0e0e0?text=Logo+Placeholder';">
+                    <img src="/images/team-min.png"
+                         alt="Quantum Improbability Solutions Team - Stylized Atom"
+                         class="w-64 h-64 md:w-80 md:h-auto object-contain border border-gray-700 rounded-sm"
+                         onerror="this.onerror=null;this.src='https://placehold.co/320x320/1a1a1a/e0e0e0?text=Logo+Placeholder';">
                 </div>
             </section>
 
