--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="qis_favicon.ico" type="images/x-icon">
     <title>Quantum Improbability Solutions - Official Site</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -215,7 +216,7 @@
                     For inquiries, please reach out through the designated channels. Our representatives are available during standard operational hours.
                 </p>
                 <div class="text-gray-300 text-sm">
-                    <p>E-mail: <a href="mailto:inquiries@quantumimprobability.com" class="text-white hover:underline">inquiries@quantumimprobability.com</a></p>
+                    <p>E-mail: <a href="mailto:brad@quantumimprobabilitysolutions.com" class="text-white hover:underline">brad@quantumimprobabilitysolutions.com</a></p>
                     <p>Phone: +1 (555) QIS-SOLV</p>
                     <p>Address: 123 Kier Blvd, Severance, NY 10001</p>
                 </div>
@@ -226,7 +227,7 @@
         <!-- Footer -->
         <footer class="w-full max-w-7xl py-8 px-4 text-center text-gray-600 text-xs border-t border-gray-800 mt-auto">
             <p>&copy; 2025 Quantum Improbability Solutions. All rights reserved. Your compliance is appreciated.</p>
-            <p class="mt-2">A Division of Perpetuity.</p>
+            <p class="mt-2">A Division of Improbability.</p>
         </footer>
     </div>
 
