--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="qis_favicon.ico" type="images/x-icon">
+    <link rel="icon" href="/images/qis_favicon.ico" type="image/x-icon">
     <title>Quantum Improbability Solutions - Official Site</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
