--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 </div>
                 <div class="md:w-1/2 flex justify-center md:justify-start">
                     <!-- Quantum Improbability Solutions Team -->
-                    <img src="/images/team-min.png"
+                    <img src="/images/qis-logo.png"
                          alt="Quantum Improbability Solutions Team - Stylized Atom"
                          class="w-64 h-64 md:w-80 md:h-auto object-contain border border-gray-700 rounded-sm"
                          onerror="this.onerror=null;this.src='https://placehold.co/320x320/1a1a1a/e0e0e0?text=Logo+Placeholder';">
@@ -218,7 +218,7 @@
                 <div class="text-gray-300 text-sm">
                     <p>E-mail: <a href="mailto:brad@quantumimprobabilitysolutions.com" class="text-white hover:underline">brad@quantumimprobabilitysolutions.com</a></p>
                     <p>Phone: +1 (555) QIS-SOLV</p>
-                    <p>Address: 123 Kier Blvd, Severance, NY 10001</p>
+                    <p>Address: 123 Improbable Blvd, Quantum, NY 10001</p>
                 </div>
             </section>
 
