--- a/index.html
+++ b/index.html
@@ -166,6 +166,15 @@
                 </div>
             </section>
 
+            <!-- Centered Generic Photo -->
+            <section class="py-16 md:py-24 text-center">
+                <div class="flex justify-center">
+                    <img src="/images/team-min.png"
+                         alt="Quantum Improbability Solutions Placeholder"
+                         class="w-full max-w-3xl rounded-sm border border-gray-700 shadow-md">
+                </div>
+            </section>
+
             <!-- Divisions Section -->
             <section id="divisions" class="py-16 md:py-24 text-center">
                 <h2 class="text-4xl font-bold mb-8">Our Core Divisions</h2>
