--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <!-- Quantum Improbability Solutions Team -->
                     <img src="/images/qis-logo.png"
                          alt="Quantum Improbability Solutions Team - Stylized Atom"
-                         class="w-64 h-64 md:w-80 md:h-auto object-contain border border-gray-700 rounded-sm"
+                         class="w-64 h-64 md:w-80 md:h-auto object-contain "
                          onerror="this.onerror=null;this.src='https://placehold.co/320x320/1a1a1a/e0e0e0?text=Logo+Placeholder';">
                 </div>
             </section>
