--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
           <section id="home" class="flex flex-col md:flex-row items-center justify-between py-16 md:py-24 text-center md:text-left">
               <div class="md:w-1/2 mb-8 md:mb-0">
                   <h1 class="text-5xl md:text-6xl font-extrabold leading-tight mb-6">
-                      A Refined Existence.
-                      <br>A Better You.
+                      Redefining Impossibility.
+                      <br>Monetizing the Unlikely.
                   </h1>
                   <p class="text-lg text-gray-400 mb-8 max-w-md mx-auto md:mx-0">
                       At Quantum Improbability Solutions, we believe in the inherent potential within every individual. Through our innovative programs, we unlock new efficiencies and foster unparalleled focus.
