--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                       <br>Monetizing the Unlikely.
                   </h1>
                   <p class="text-lg text-gray-400 mb-8 max-w-md mx-auto md:mx-0">
-                      At Quantum Improbability Solutions, we believe in the inherent potential within every individual. Through our innovative programs, we unlock new efficiencies and foster unparalleled focus.
+                      At Quantum Improbability Solutions, we believe every individual contains vast, untapped potential—somewhere, probably. Our groundbreaking programs transform inefficiency into slightly different inefficiency, unlocking quantum-level productivity along the way.
                   </p>
                   <a href="#careers" class="button-primary inline-block text-lg font-semibold">
                       EXPLORE OPPORTUNITIES
