--- a/index.html
+++ b/index.html
@@ -144,24 +144,24 @@
               </div>
           </section>
 
-            <!-- About Section -->
-            <section id="about" class="py-16 md:py-12 text-center">
-                <h2 class="text-4xl font-bold mb-8">Our Philosophy</h2>
-                <div class="grid md:grid-cols-3 gap-8 text-gray-300">
-                    <div class="p-6 border border-gray-800 rounded-sm bg-gray-900/50">
-                        <h3 class="text-xl font-semibold mb-4 text-white">Precision</h3>
-                        <p class="text-sm">Every task, every thought, meticulously aligned with our core directives. We eliminate distractions, ensuring optimal output.</p>
-                    </div>
-                    <div class="p-6 border border-gray-800 rounded-sm bg-gray-900/50">
-                        <h3 class="text-xl font-semibold mb-4 text-white">Harmony</h3>
-                        <p class="text-sm">Our integrated methodologies foster a seamless environment where individual contributions coalesce into collective triumph.</p>
-                    </div>
-                    <div class="p-6 border border-gray-800 rounded-sm bg-gray-900/50">
-                        <h3 class="text-xl font-semibold mb-4 text-white">Legacy</h3>
-                        <p class="text-sm">For generations, Quantum Improbability Solutions has guided humanity towards its true purpose. We are the architects of a brighter tomorrow.</p>
-                    </div>
-                </div>
-            </section>
+          <!-- About Section -->
+          <section id="about" class="py-16 md:py-12 text-center">
+              <h2 class="text-4xl font-bold mb-8">Our Philosophy</h2>
+              <div class="grid md:grid-cols-3 gap-8 text-gray-300">
+                  <div class="p-6 border border-gray-800 rounded-sm bg-gray-900/50">
+                      <h3 class="text-xl font-semibold mb-4 text-white">Precision(ish)</h3>
+                      <p class="text-sm">Every initiative is carefully misaligned with our core directives to produce outcomes so unexpected they’re practically innovative. Distractions aren’t eliminated—they’re weaponized for maximum quantum efficiency.</p>
+                  </div>
+                  <div class="p-6 border border-gray-800 rounded-sm bg-gray-900/50">
+                      <h3 class="text-xl font-semibold mb-4 text-white">Harmony (in Theory)</h3>
+                      <p class="text-sm">By combining corporate jargon with quantum uncertainty, we’ve created an environment where individual contributions occasionally converge into coherent outcomes—sometimes even on purpose.</p>
+                  </div>
+                  <div class="p-6 border border-gray-800 rounded-sm bg-gray-900/50">
+                      <h3 class="text-xl font-semibold mb-4 text-white">Legacy (Pending Approval)</h3>
+                      <p class="text-sm">For decades, QIS has bravely redefined what’s possible—and occasionally what’s legal—accidentally propelling humanity toward a brighter, if slightly improbable, tomorrow.</p>
+                  </div>
+              </div>
+          </section>
 
             <!-- Centered Generic Photo -->
             <section class="py-8 md:py-12 text-center">
