--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
         <main class="flex-grow w-full max-w-7xl px-4">
 
           <!-- Hero Section -->
-          <section id="home" class="flex flex-col md:flex-row items-center justify-between py-16 md:py-24 text-center md:text-left">
+          <section id="home" class="flex flex-col md:flex-row items-center justify-between py-12 md:py-24 text-center md:text-left">
               <div class="md:w-1/2 mb-8 md:mb-0">
-                  <h1 class="text-5xl md:text-6xl font-extrabold leading-tight mb-6">
+                  <h1 class="text-3xl sm:text-4xl md:text-6xl font-extrabold leading-tight mb-6">
                       Redefining Impossibility.
                       <br>Monetizing the Unlikely.
                   </h1>
-                  <p class="text-lg text-gray-400 mb-8 max-w-md mx-auto md:mx-0">
+                  <p class="text-base sm:text-lg text-gray-400 mb-8 max-w-md mx-auto md:mx-0">
                       At Quantum Improbability Solutions, we believe every individual contains vast, untapped potential—somewhere, probably. Our groundbreaking programs transform inefficiency into slightly different inefficiency, unlocking quantum-level productivity along the way.
                   </p>
                   <a href="#careers" class="button-primary inline-block text-lg font-semibold">
