--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <!-- Footer -->
         <footer class="w-full max-w-7xl py-8 px-4 text-center text-gray-600 text-xs border-t border-gray-800 mt-auto">
             <p>&copy; 2025 Quantum Improbability Solutions. All rights reserved. Your compliance is appreciated.</p>
-            <p class="mt-2">A Division of Improbability.</p>
+            <p class="mt-2">A Division of Solutions Improbability Quantum.</p>
         </footer>
     </div>
 
