--- a/index.html
+++ b/index.html
@@ -210,7 +210,9 @@
                 <p class="text-lg text-gray-400 mb-8 max-w-2xl mx-auto">
                     Are you ready to commit to a purpose greater than yourself? Quantum Improbability Solutions offers a unique path to professional fulfillment and personal growth.
                 </p>
-                <a href="#contact" class="button-primary inline-block text-lg font-semibold">
+                <a href="mailto:hr@quantumimprobabilitysolutions.com"
+                   class="button-primary inline-block text-lg font-semibold"
+                   target="_blank">
                     APPLY NOW
                 </a>
             </section>
