--- a/index.html
+++ b/index.html
@@ -236,7 +236,36 @@
         <footer class="w-full max-w-7xl py-8 px-4 text-center text-gray-600 text-xs border-t border-gray-800 mt-auto">
             <p>&copy; 2025 Quantum Improbability Solutions. All rights reserved. Your compliance is appreciated.</p>
             <p class="mt-2">A Division of Solutions Improbability Quantum.</p>
+            <!-- Social Buttons -->
+            <div class="mt-4 flex justify-center gap-4">
+                <a href="#" aria-label="LinkedIn" class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-gray-800 hover:bg-gray-700">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-5 h-5 text-gray-300" viewBox="0 0 24 24">
+                        <path d="M19 0h-14c-2.76 0-5 2.24-5 5v14c0 2.76 2.24 5 5
+                        5h14c2.76 0 5-2.24 5-5v-14c0-2.76-2.24-5-5-5zm-11
+                        19h-3v-10h3v10zm-1.5-11.27c-.97 0-1.75-.79-1.75-1.76
+                        0-.97.78-1.75 1.75-1.75s1.75.78
+                        1.75 1.75c0 .97-.78 1.76-1.75
+                        1.76zm13.5 11.27h-3v-5.5c0-1.1-.9-2-2-2s-2 .9-2
+                        2v5.5h-3v-10h3v1.35c.41-.63 1.17-1.35
+                        2.25-1.35 1.66 0 3 1.34 3
+                        3v7z"/>
+                    </svg>
+                </a>
+                <a href="#" aria-label="Threads" class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-gray-800 hover:bg-gray-700">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-5 h-5 text-gray-300" viewBox="0 0 24 24">
+                        <path d="M12 0C5.372 0 0 5.372 0
+                        12s5.372 12 12 12 12-5.372 12-12S18.628
+                        0 12 0zm0 22C6.486 22 2 17.514
+                        2 12S6.486 2 12 2s10 4.486 10
+                        10-4.486 10-10 10zm-1-17h-1v2h1c1.103
+                        0 2 .897 2 2s-.897 2-2 2h-1v2h1c2.206
+                        0 4-1.794 4-4s-1.794-4-4-4zm0
+                        6h-1v2h1c.551 0 1-.449 1-1s-.449-1-1-1z"/>
+                    </svg>
+                </a>
+            </div>
         </footer>
+
     </div>
 
     <script>
