--- a/index.html
+++ b/index.html
@@ -233,11 +233,11 @@
             <section id="social" class="py-2 md:py-2 text-center border-b-0">
               <div class="mt-4 flex justify-center gap-4">
                   <!-- LinkedIn Button -->
-                  <a href="#" aria-label="LinkedIn" class="inline-flex items-center justify-center">
+                  <a href="http://linkedin.com/company/quantumimprobabilitysolutions/" aria-label="LinkedIn" class="inline-flex items-center justify-center">
                       <img src="/images/linkedin-icon.png" alt="LinkedIn" class="w-8 h-8 hover:opacity-80">
                   </a>
                   <!-- Threads Button -->
-                  <a href="#" aria-label="Threads" class="inline-flex items-center justify-center">
+                  <a href="https://www.threads.com/@themultiverseemployeehandbook" aria-label="Threads" class="inline-flex items-center justify-center">
                       <img src="/images/threads-icon.png" alt="Threads" class="w-8 h-8 hover:opacity-80">
                   </a>
               </div>
