--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <div class="flex justify-center">
                     <img src="/images/team-min.png"
                          alt="Quantum Improbability Solutions Placeholder"
-                         class="w-full max-w-3xl rounded-sm border border-gray-700 shadow-md">
+                         class="w-full max-w-xl md:max-w-md rounded-sm border border-gray-700 shadow-md">
                 </div>
             </section>
 
