--- a/index.html
+++ b/index.html
@@ -203,6 +203,30 @@
                 </div>
             </section>
 
+            <!-- Life at QIS Section -->
+            <section class="py-8 md:py-12 text-center">
+                <h2 class="text-4xl font-bold mb-8">Life at QIS</h2>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+                    <!-- Photo 1 -->
+                    <div class="flex justify-center">
+                        <img src="/images/qis-life-01.png"
+                             alt="Life at QIS Photo 1"
+                             class="w-full max-w-sm aspect-square object-cover rounded-sm border border-gray-700 shadow-md">
+                    </div>
+                    <!-- Photo 2 -->
+                    <div class="flex justify-center">
+                        <img src="/images/qis-life-02.png"
+                             alt="Life at QIS Photo 2"
+                             class="w-full max-w-sm aspect-square object-cover rounded-sm border border-gray-700 shadow-md">
+                    </div>
+                    <!-- Photo 3 -->
+                    <div class="flex justify-center">
+                        <img src="/images/qis-life-03.png"
+                             alt="Life at QIS Photo 3"
+                             class="w-full max-w-sm aspect-square object-cover rounded-sm border border-gray-700 shadow-md">
+                    </div>
+                </div>
+            </section>
 
             <!-- Careers Section -->
             <section id="careers" class="py-16 md:py-24 text-center">
